--- a/LDcats.html
+++ b/LDcats.html
@@ -1,5 +1,7 @@
 <html>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script
     <script>
+
         $.getJSON( "games.json", function( data ) {
             console.log(data);
         }
